--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -88,7 +88,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" th:data-url="'/user-details/search/' + ${user.getUserId()}" th:href="@{#search}">Search
+                        <a class="nav-link profile-navbar-text" th:attr="data-url=@{/user-details/search(size=(${#request.getParameter('size')} ?: '2'),id= ${user.getUserId()}, page=(${#request.getParameter('page')} ?: '1'))}"
+                            th:href="@{#search}">Search
                             History</a>
                     </li>
 
