pagination added and reformatted code

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -73,7 +73,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" data-url="/admin-panel/hot-list" th:href="@{#hot-list}">Hot
+                        <a class="nav-link profile-navbar-text" th:attr="data-url=@{/admin-panel/hotList(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}" th:href="@{#hotList}">Hot
                             Lists</a>
                     </li>
 
@@ -113,7 +113,7 @@
                     <div class="tab-pane" id="category"></div>
 
                     <!-- Hot List -->
-                    <div class="tab-pane" id="hot-list"></div>
+                    <div class="tab-pane" id="hotList"></div>
 
                     <!-- Campaign -->
                     <div class="tab-pane" id="campaign"></div>
