--- a/src/main/resources/templates/admin_panel/_user.html
+++ b/src/main/resources/templates/admin_panel/_user.html
@@ -91,9 +91,9 @@
         <div class="page_nav">
             <ul class="d-flex flex-row align-items-start justify-content-center">
                 <div th:if="${userPage.totalPages > 0}" th:each="pageNumber : ${pageNumbers}">
-                <li ><a th:href="@{/admin-panel#user(size=${userPage.size}, page=${pageNumber})}"
-                                      th:text="${pageNumber}"
-                                      th:class="${pageNumber==userPage.number + 1} ? active"></a></li>
+                <li><a th:href="@{/admin-panel#user(size=${userPage.size}, page=${pageNumber})}"
+                       th:text="${pageNumber}"
+                       th:class="${pageNumber==userPage.number + 1} ? active"></a></li>
                 </div>
             </ul>
         </div>
@@ -108,4 +108,44 @@
 </span>
 
 
+<script>
+    $('#data-isotope-option').click(function (event) {
+
+
+        var ret = {
+            subject: subject,
+            messageContent: messageContent,
+            submit: submit
+        };
+
+        if (validation_check(["subject_area", "textarea"])) {
+            event.preventDefault();
+            $.post("/admin-panel/message", ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Message sent successfully.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                $("#message_form")[0].reset();
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+            })
+        }
+    });
+
+    function validation_check(arr) {
+        for (var i = 0; i < arr.length; i++) {
+            if (!document.getElementById(arr[i]).checkValidity()) {
+                return false;
+            }
+        }
+        return true;
+    }
+</script>
 </html>
