pagination added to admin panel product tab

--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1348,7 +1348,7 @@
 </div>
 
 <!-- Sort orders -->
-<span th:unless="${#lists.isEmpty(allProducts)}">
+<span th:if="${productPage.totalPages > 0}">
     <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
         <div class="products_dropdown product_dropdown_sorting">
             <div class="isotope_sorting_text"><span>Sort</span><i
@@ -1396,7 +1396,7 @@
         <br>
         <div class="container">
             <div class="orderDetailBox">
-            <tr th:each="product: ${allProducts}">
+            <tr th:each="product: ${productPage.content}">
 
                 <!-- Product -->
                 <div class="address-element-padding">
@@ -1456,10 +1456,11 @@
         <div class="col">
             <div class="page_nav">
                 <ul class="d-flex flex-row align-items-start justify-content-center">
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#" style="color: #fbaa1d;">2</a></li>
-                    <li><a href="#" style="color: #fbaa1d;">3</a></li>
-                    <li><a href="#" style="color: #fbaa1d;">4</a></li>
+                    <div th:if="${productPage.totalPages > 0}" th:each="pageNumber : ${pageNumbers}">
+                    <li ><a th:href="@{/admin-panel#product(size=${productPage.size}, page=${pageNumber})}"
+                            th:text="${pageNumber}"
+                            th:class="${pageNumber==productPage.number + 1} ? active"></a></li>
+                    </div>
                 </ul>
             </div>
         </div>
@@ -1467,7 +1468,7 @@
 </span>
 
 <!-- No product -->
-<span th:if="${#lists.isEmpty(allProducts)}">
+<span th:unless="${productPage.totalPages >0}">
     <div class="warning-text">There are no products.</div>
 </span>
 
