--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1459,8 +1459,7 @@
                     <!-- Previous button -->
                     <li th:style="${currentPage == 1} ? 'display:none'">
                         <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${currentPage - 1})}"
-                           aria-label="Previous" title="Previous Page" rel="tooltip"
-                           th:title="${'Page 1'}">
+                           aria-label="Previous" title="Previous Page" rel="tooltip">
                             <i class="fa fa-angle-left" style="font-size:24px; color: #fbaa1d; font-weight: bold;"></i>
                         </a>
                     </li>
@@ -1468,7 +1467,7 @@
                     <!-- First page -->
                     <li th:if="${productPage.totalPages > 0}"
                         th:class="${currentPage == 1} ? 'active'">
-                        <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1})}"
+                        <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${1})}" th:title="${'Page '+ 1}"
                            th:text="${1}" style="color: #fbaa1d;">
                         </a>
                     </li>
@@ -1476,7 +1475,7 @@
                     <li th:if="${currentPage - 3 > 1}" style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
 
                     <!-- Pages -->
-                    <li th:if="${productPage.totalPages > 1}"
+                    <li th:if="${productPage.totalPages > 2}"
                         th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                         , productPage.totalPages > 2 + currentPage ? currentPage + 2 : productPage.totalPages - 1, 1)}"
                         th:class="${currentPage == i} ? 'active'">
@@ -1487,17 +1486,17 @@
                     <li th:if="${currentPage + 3 < productPage.totalPages}" style="color: #fbaa1d; pointer-events:none; background-color: transparent;">...</li>
 
                     <!-- Last page -->
-                    <li th:if="${productPage.totalPages > 0}"
+                    <li th:if="${productPage.totalPages > 1}"
                         th:class="${currentPage == productPage.totalPages} ? 'active'">
                         <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${productPage.totalPages})}"
-                           th:text="${productPage.totalPages}" style="color: #fbaa1d;">
+                           th:text="${productPage.totalPages}" style="color: #fbaa1d;" th:title="${'Page '+ productPage.totalPages}">
                         </a>
                     </li>
 
                     <!-- Next button -->
                     <li th:style="${currentPage == productPage.totalPages} ? 'display:none'">
                         <a th:href="@{/admin-panel#product(size=${productPage.size}, page=${currentPage + 1})}"
-                            aria-label="Next" title="Next Page" rel="tooltip" th:title="${'Page '+ currentPage}">
+                            aria-label="Next" title="Next Page" rel="tooltip">
                             <i class="fa fa-angle-right" style="font-size:24px; color: #fbaa1d; font-weight: bold;"></i>
                         </a>
                     </li>
